--- a/MI2601258.tex
+++ b/MI2601258.tex
@@ -115,13 +115,14 @@ Please replace this text with your own summary. This summary should briefly desc
 \input{body/6task2.tex}
 \input{body/7task3.tex}
 \input{body/8task4.tex}
+\input{body/9Conclusions_and_Implications.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
 \pagestyle{fancy}
 \thispagestyle{fancy}
-	
+
 \end{CJK}
 \end{document}
 \end
