--- a/body/4Data_Explanation.tex
+++ b/body/4Data_Explanation.tex
@@ -2,7 +2,7 @@
 
 \subsection{Data Description and Sources}
 
-The dataset covers ten representative countries and consists of multiple quantitative indicators describing national AI development capability. For organizational clarity, the indicators were grouped into six dimensions reflecting different aspects of AI development. All data corresponded to the same evaluation period and were obtained from publicly available and widely recognized sources, ensuring cross-country comparability.
+The dataset covers a lot of representative countries and consists of multiple quantitative indicators describing national AI development capability. For organizational clarity, the indicators were grouped into six dimensions reflecting different aspects of AI development. All data corresponded to the same evaluation period and were obtained from publicly available and widely recognized sources, ensuring cross-country comparability.
 
 \subsection{Data Preprocessing}
 
